--- a/1.html
+++ b/1.html
@@ -10,6 +10,7 @@
         width: 100px;
         height: 100px;
         background-color: darksalmon;
+        color:green;
     }
 </style>
 <body>
